2009-07-17  Peter Kasting  <pkasting@google.com>

        Reviewed by David Kilzer.

        https://bugs.webkit.org/show_bug.cgi?id=27323
        Tweak some regexes for correctness.

        * Scripts/prepare-ChangeLog: Allow 1-character filenames (my previous
          change here didn't quite get things right).
        * Scripts/update-webkit: Detect conflicting ChangeLogs correctly by not
          including any trailing whitespace in the name "ChangeLog", and by
          normalizing paths before calling basename() to avoid confusing it.
          (normalizePath() copied from prepare-ChangeLog.)

2009-07-17  Peter Kasting  <pkasting@google.com>

        Reviewed by Steve Falkenburg.

        https://bugs.webkit.org/show_bug.cgi?id=27323
        Only add Cygwin to the path when it isn't already there.  This avoids
        causing problems for people who purposefully have non-Cygwin versions of
        executables like svn in front of the Cygwin ones in their paths.

        * DumpRenderTree/win/DumpRenderTree.vcproj:
        * DumpRenderTree/win/ImageDiff.vcproj:
        * DumpRenderTree/win/TestNetscapePlugin/TestNetscapePlugin.vcproj:

2009-07-17  David Levin  <levin@chromium.org>

        Reviewed by Adam Treat.

        WebKit should have a bash completion script to aid with common commands.
        https://bugs.webkit.org/show_bug.cgi?id=27374

        * Scripts/webkit-tools-completion.sh: The script which enables option completion
          for several WebKit command line scripts.

2009-07-17  Peter Kasting  <pkasting@google.com>

        Reviewed by David Kilzer.

        https://bugs.webkit.org/show_bug.cgi?id=27323
        Avoid error spew on Macs, and fix a few other tiny details.

        * Scripts/svn-create-patch:

2009-07-17  Adam Treat  <adam.treat@torchmobile.com>

        Reviewed by Dave Levin.

        https://bugs.webkit.org/show_bug.cgi?id=27377
        This makes cpplint complain about this for instance:

            if (true)